--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>This is Branches Topic</h1>
+    <header>
+        Header part Day 1 is completed
+    </header>
 </body>
 </html>
