--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <header>
         Header part Day 1 is completed
     </header>
+    <footer>
+        some footer work by main 
+        it may create conflict
+    </footer>
 </body>
 </html>
