--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         Header part Day 1 is completed
     </header>
     <footer>
-        some footer work by main 
-        it may create conflict
+        Footer part of the work of the day 1 is completed
     </footer>
 </body>
 </html>
